--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,8 @@ dependencies {
   // Google Map SDK
   implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
+  implementation "androidx.activity:activity-ktx:1.1.0"
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+  implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
 }
